# messenger-gtk

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  bootstrap  configure.ac  meson.build
.github/workflows/: linux.yml
contrib/: check_submodules.sh
po/: POTFILES  de.po  en.po  es.po  messenger-gtk.pot
resources/: Makefile.am  css.gresource.xml  messenger-gtk.desktop  org.gnunet.Messenger.appdata.xml  ui.gresource.xml
resources/css/: style.css
resources/icon/: Makefile.am
resources/ui/: #messenger.ui#  about.ui  account_entry.ui  accounts.ui  chat.ui  chat_entry.ui  chat_title.ui  contact_entry.ui  contact_info.ui  contacts.ui  delete_messages.ui  discourse.ui  discourse_panel.ui  file_entry.ui  file_load_entry.ui  files.ui  invite_contact.ui  media_preview.ui  message-sent.ui  message-status.ui  message.ui  message_content.ui  messenger.ui  new_account.ui  new_contact.ui  new_group.ui  new_lobby.ui  new_platform.ui  new_profile.ui  new_tag.ui  picker.ui  play_media.ui  profile_entry.ui  send_file.ui  settings.ui  tag.ui
snap/: snapcraft.yaml
src/: Makefile.am  account.c  account.h  application.c  application.h  bindings.c  bindings.h  contact.c  contact.h  discourse.c  discourse.h  event.c  event.h  file.c  file.h  media.c  media.h  meson.build  messenger_gtk.c  request.c  request.h  resources.h  schedule.c  schedule.h  ui.c  ui.h  util.c  util.h
src/chat/: Makefile.am  messenger.c  messenger.h
src/ui/: Makefile.am  about.c  about.h  account_entry.c  account_entry.h  accounts.c  accounts.h  chat.c  chat.h  chat_entry.c  chat_entry.h  chat_title.c  contact_entry.c  contact_entry.h  contact_info.c  contact_info.h  contacts.c  contacts.h  delete_messages.c  delete_messages.h  discourse.c  discourse.h  discourse_panel.c  discourse_panel.h  file_entry.c  file_entry.h  file_load_entry.c  file_load_entry.h  files.c  invite_contact.c  invite_contact.h  media_preview.c  media_preview.h  meson.build  message.c  message.h  messenger.c  messenger.h  new_account.c  new_account.h  (+23 more)
